# simulator-armory

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Main.qml  Makefile  README.md  SUBMODULE_SETUP.md  globeitem.cpp  globeitem.h  main.cpp  resource.qrc  setup-private-submodule.sh
codec/: codecConfiguration.json
example/: CMakeLists.txt  main.cpp
example/lrad/: lrad_server.cpp  main.cpp
example/radar/: main.cpp  radar_server.cpp
example/server/: server.cpp
src/: CMakeLists.txt  factory.h  general_simulator.cpp  general_simulator.h  simulator.h
src/json/: json.h  nlohmann.h
src/json/nlohmann/: CMakeLists.txt  README.md
src/json/nlohmann/.github/workflows/: check_amalgamation.yml  cifuzz.yml  codeql-analysis.yml  comment_check_amalgamation.yml  dependency-review.yml  flawfinder.yml  labeler.yml  macos.yml  publish_documentation.yml  scorecards.yml  semgrep.yml  stale.yml  ubuntu.yml  windows.yml
src/json/nlohmann/cmake/requirements/: requirements-reuse.txt
src/json/nlohmann/docs/mkdocs/: mkdocs.yml  requirements.txt
src/json/nlohmann/include/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
src/json/nlohmann/include/nlohmann/detail/: abi_macros.hpp  exceptions.hpp  hash.hpp  json_custom_base_class.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  string_concat.hpp  string_escape.hpp  string_utils.hpp  value_t.hpp
src/json/nlohmann/single_include/nlohmann/: json_fwd.hpp
src/json/nlohmann/src/modules/: CMakeLists.txt
src/json/nlohmann/tests/abi/: main.cpp
src/json/nlohmann/tests/abi/config/: config.hpp  custom.cpp  default.cpp  noversion.cpp
src/json/nlohmann/tests/abi/diag/: diag.cpp  diag.hpp  diag_off.cpp  diag_on.cpp
src/json/nlohmann/tests/abi/inline_ns/: use_current.cpp  use_v3_10_5.cpp
src/json/nlohmann/tests/benchmarks/src/: benchmarks.cpp
src/json/nlohmann/tests/cmake_add_subdirectory/: CMakeLists.txt
src/json/nlohmann/tests/cmake_add_subdirectory/project/: CMakeLists.txt
src/json/nlohmann/tests/cmake_fetch_content/: CMakeLists.txt
src/json/nlohmann/tests/cmake_fetch_content/project/: CMakeLists.txt  main.cpp
src/json/nlohmann/tests/cmake_fetch_content2/: CMakeLists.txt
src/json/nlohmann/tests/cmake_fetch_content2/project/: CMakeLists.txt
src/json/nlohmann/tests/cmake_import/: CMakeLists.txt
src/json/nlohmann/tests/cmake_import/project/: CMakeLists.txt
src/json/nlohmann/tests/cmake_import_minver/: CMakeLists.txt
src/json/nlohmann/tests/cmake_import_minver/project/: CMakeLists.txt
src/json/nlohmann/tests/cmake_target_include_directories/: CMakeLists.txt
src/json/nlohmann/tests/cuda_example/: json_cuda.cu
src/json/nlohmann/tests/module_cpp20/: CMakeLists.txt  main.cpp
src/json/nlohmann/tests/src/: fuzzer-driver_afl.cpp  fuzzer-parse_bjdata.cpp  fuzzer-parse_bson.cpp  fuzzer-parse_cbor.cpp  fuzzer-parse_json.cpp  fuzzer-parse_msgpack.cpp  fuzzer-parse_ubjson.cpp  make_test_data_available.hpp  test_utils.hpp  unit-32bit.cpp  unit-algorithms.cpp  unit-allocator.cpp  unit-alt-string.cpp  unit-assert_macro.cpp  unit-binary_formats.cpp  unit-bjdata.cpp  unit-bson.cpp  unit-byte_container_with_subtype.cpp  unit-capacity.cpp  unit-cbor.cpp  unit-class_const_iterator.cpp  unit-class_iterator.cpp  unit-class_lexer.cpp  unit-class_parser.cpp  unit-class_parser_diagnostic_positions.cpp  unit-comparison.cpp  unit-concepts.cpp  unit-constructor1.cpp  unit-constructor2.cpp  unit-convenience.cpp  unit-conversions.cpp  unit-custom-base-class.cpp  unit-deserialization.cpp  unit-diagnostic-positions-only.cpp  unit-diagnostic-positions.cpp  unit-diagnostics.cpp  unit-disabled_exceptions.cpp  unit-element_access1.cpp  unit-element_access2.cpp  unit-hash.cpp  (+38 more)
src/json/nlohmann/tools/serve_header/: requirements.txt  serve_header.py
test/: CMakeLists.txt  test_simulator.cpp
ui_simulator/: CMakeLists.txt  main.cpp
ui_simulator/src/: CMakeLists.txt  RadarClient.cpp  RadarClient.h  RadarWidget.cpp  RadarWidget.h  RadarWindow.cpp  RadarWindow.h  payam.hpp
ui_simulator/src/include/civil_codec/: CodecInterface.h  DecoderInterface.h  EncoderInterface.h  Record.h  RecordCollection.h  civil_codec.h
ui_simulator/src/include/civil_codec/facade/: CodecInterface.cpp  DecoderInterface.cpp  DecoderInterface_old.cpp  EncoderInterface.cpp  Record.cpp  RecordCollection.cpp
ui_simulator/src/include/config/: CommonVariables.h  Constants.h  FacadeCommonVariables.h
ui_simulator/src/include/config/enum/: FilterTypeEnum.h  FunctionNameEnum.h  ItemTypeEnum.h  RepresentationModeEnum.h
ui_simulator/src/include/data_model/: CategoriesFilters.h  CategoriesToFilter.h  CategoryConfiguration.h  CategoryFilter.h  CategoryItemsFilter.h  ItemsToFilter.h  civilConfiguration.h
ui_simulator/src/include/data_model/blocking_queue/: BlockingQueueManager.h  DecoderBlockingQueue.h  ParserBlockingQueue.h
ui_simulator/src/include/data_model/civil_description/: CategoryDescription.h  Item.h
ui_simulator/src/include/data_model/decoder_object_pool/: DecodedValueObjectPoolManager.h  ObjectPool.hpp  ParsedRecord.h
ui_simulator/src/include/data_model/decoder_objects/: DoubleValue.h  ElementValue.hpp  FloatValue.h  IntegerValue.h  ParsedElement.h  SignedInteger16bitBEValue.h  SignedInteger16bitValue.h  SignedInteger32bitBEValue.h  SignedInteger32bitValue.h  SignedInteger64bitBEValue.h  SignedInteger64bitValue.h  SignedInteger8bitValue.h  StringValue.h  UnsignedInteger16bitBEValue.h  UnsignedInteger16bitValue.h  UnsignedInteger32bitBEValue.h  UnsignedInteger32bitValue.h  UnsignedInteger64bitBEValue.h  UnsignedInteger64bitValue.h  UnsignedInteger8bitValue.h
ui_simulator/src/include/utils/: BitUtils.h  ConversionFromStringToEnum.hpp  DecodingUtils.h  ElementEncodingUtils.h  ItemEncodingUtils.h  ParsingUtils.h  PrintingUtils.h  decoderForParsedRecord.h  encoderForDecodedRecord.hpp
ui_simulator/src/include/utils/civil_json_description/: JsonCategoriesDescriptionLoader.h  JsonCategoriesDescriptionValidator.h
ui_simulator/src/lib/thread_pool/: COPYING  ThreadPool.hpp
(+97 files in other folders)
